--- a/assets/css/responsive480x760.css
+++ b/assets/css/responsive480x760.css
@@ -211,14 +211,12 @@
 
 
 .main-consultoria-segunda {
-  background-color: #616668;
- 
-  padding-top: 50px;
-  padding-bottom: 50px;
-  
+  background-color: #1a1a1a;
+  padding: 60px 32px;
   display: flex;
   flex-direction: column;
-  
+  align-items: center;
+  text-align: center;
 }
 
 
@@ -232,21 +230,25 @@
 .texto-dourado {
   color: #f2e8c4;
   padding-top: 20px;
-  margin-bottom: 30px;
+  margin-bottom: 24px;
   font-size: 18px;
   font-family: 'Releway';
-  text-align: left;
-  font-weight: 500;  
+  text-align: center;
+  font-weight: 700;
+  letter-spacing: 1.5px;
 }
 
-
 .main-consultoriaDoisTexto {
-  color: #ffffff;
-  text-align: left;
-  line-height: 1.5;
-  font-family: 'Releway'; 
-  font-size: 14px;
-  font-weight: 200;  
+  color: #9a9490;
+  text-align: center;
+  line-height: 1.8;
+  font-family: 'Releway';
+  font-size: 15px;
+  font-weight: 300;
+}
+
+.main-consultoriaDoisTexto p {
+  margin-bottom: 14px;
 }
 
 .foto { 
